Update README.md, fix x-overflow (temporarily)

--- a/public/styles/components/_app.scss
+++ b/public/styles/components/_app.scss
@@ -8,4 +8,6 @@
  *  Version:
  *    1.0.0 - 2018/05/03
  */
-.c-app {}
+.c-app {
+  overflow-x: hidden;//Temporary until I find time to find the overflowing element
+}
